--- a/timelog.org
+++ b/timelog.org
@@ -1,4 +1,5 @@
 * Golden Hour
 :LOGBOOK:
+CLOCK: [2020-01-17 pią 10:15]--[2020-01-17 pią 11:00] =>  0:45
 CLOCK: [2020-01-17 pią 09:13]--[2020-01-17 pią 10:05] =>  0:52
 :END:
