Fix a lot of stuff
I don't even remember exactly how many small issues I have fixed.
Good news is that there isn't a lot of new code.  It's just written
with more cases in mind.  And there are more tests.

@examples tag description is still broken and other descriptions are
still printed as single long line.

--- a/timelog.org
+++ b/timelog.org
@@ -1,5 +1,7 @@
 * Golden Hour
 :LOGBOOK:
+CLOCK: [2020-01-19 nie 08:14]--[2020-01-19 nie 08:59] =>  0:45
+CLOCK: [2020-01-18 sob 20:18]--[2020-01-18 sob 21:03] =>  0:45
 CLOCK: [2020-01-18 sob 06:53]--[2020-01-18 sob 07:34] =>  0:41
 CLOCK: [2020-01-17 pią 15:42]--[2020-01-17 pią 16:30] =>  0:48
 CLOCK: [2020-01-17 pią 14:32]--[2020-01-17 pią 15:12] =>  0:40
