Be consistent about dot in description and work on default value

--- a/timelog.org
+++ b/timelog.org
@@ -1,5 +1,6 @@
 * Golden Hour
 :LOGBOOK:
+CLOCK: [2020-01-19 nie 09:35]--[2020-01-19 nie 10:21] =>  0:46
 CLOCK: [2020-01-19 nie 08:14]--[2020-01-19 nie 08:59] =>  0:45
 CLOCK: [2020-01-18 sob 20:18]--[2020-01-18 sob 21:03] =>  0:45
 CLOCK: [2020-01-18 sob 06:53]--[2020-01-18 sob 07:34] =>  0:41
