Fix @memberof description

--- a/timelog.org
+++ b/timelog.org
@@ -1,5 +1,6 @@
 * Golden Hour
 :LOGBOOK:
+CLOCK: [2020-01-19 nie 18:38]--[2020-01-19 nie 19:20] =>  0:42
 CLOCK: [2020-01-19 nie 15:55]--[2020-01-19 nie 16:38] =>  0:43
 CLOCK: [2020-01-19 nie 14:51]--[2020-01-19 nie 15:36] =>  0:45
 CLOCK: [2020-01-19 nie 09:35]--[2020-01-19 nie 10:21] =>  0:46
