Convert code to prettier plugin and support options

--- a/timelog.org
+++ b/timelog.org
@@ -1,5 +1,6 @@
 * Golden Hour
 :LOGBOOK:
+CLOCK: [2020-01-20 pon 13:37]--[2020-01-20 pon 14:23] =>  0:46
 CLOCK: [2020-01-20 pon 11:17]--[2020-01-20 pon 12:02] =>  0:45
 CLOCK: [2020-01-19 nie 18:38]--[2020-01-19 nie 19:20] =>  0:42
 CLOCK: [2020-01-19 nie 15:55]--[2020-01-19 nie 16:38] =>  0:43
