Enable test for scenario with sorting more then 10 tags
I did full investigation of issue on my computer but it looks like
everything is working just fine.  I couldn't reproduce output "after"
from comment in skipped test.

--- a/timelog.org
+++ b/timelog.org
@@ -1,5 +1,6 @@
 * Golden Hour
 :LOGBOOK:
+CLOCK: [2020-02-22 sob 19:10]--[2020-02-22 sob 19:38] =>  0:28
 CLOCK: [2020-01-30 czw 16:39]--[2020-01-30 czw 17:23] =>  0:44
 CLOCK: [2020-01-30 czw 15:12]--[2020-01-30 czw 15:54] =>  0:42
 CLOCK: [2020-01-24 pią 15:54]--[2020-01-24 pią 16:42] =>  0:48
